# CertainRAG

./: .gitignore  DECISIONS.md  README.md  pyproject.toml  test_retriever.py
certainrag/: __init__.py  exceptions.py  faithfulness.py  llm_client.py  retriever.py  scorer.py  utils.py
certainrag/signals/: __init__.py  faithfulness.py  retrieval_score.py  retriever.py  self_consistency.py  semantic_entropy.py
evaluation/: benchmark.py  benchmark_pubmedqa.py  benchmark_squad.py  calibrate_weights.py  retriever.py
tests/: test_faithfulness.py  test_integration.py  test_retrieval_score.py  test_scorer.py  test_semantic_entropy.py
