[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "certainrag"
version = "0.1.0"
description = "Runtime uncertainty quantification for RAG pipelines"
requires-python = ">=3.9"
dependencies = [
    "numpy", "transformers", "torch", "sentence-transformers",
    "faiss-cpu", "datasets", "scikit-learn", "matplotlib"
]

[tool.setuptools.packages.find]
include = ["certainrag*"]